--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.5.12",
     "@nestjs/typeorm": "^7.1.0",
+    "builder-pattern": "^1.2.4",
     "change-case": "^4.1.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
