--- a/package.json
+++ b/package.json
@@ -24,14 +24,19 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.1.0",
+    "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.5.12",
     "@nestjs/typeorm": "^7.1.0",
+    "@types/passport-local": "^1.0.33",
     "builder-pattern": "^1.2.4",
     "change-case": "^4.1.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "dockerode": "^3.2.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
