--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ DATABASE_USER=postgres
 DATABASE_PASSWORD=mysecretpassword
 DATABASE_HOST=localhost
 DATABASE_PORT=5435
+DATABASE_NAME=myrefill
 
 JWT_SECRET=secretKey
 
