add razorypay customer creation

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ DATABASE_NAME=myrefill
 JWT_SECRET=secretKey
 
 ADMIN_PASS=Admin@123
+
+RAZORPAY_KEY=rzp_test_HbdgkZNaPBegQQ
+RAZORPAY_SECRET=N8tTS5lPhKnV2estPPF3tjzu
