--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.12.2",
     "dockerode": "^3.2.1",
     "dotenv": "^8.2.0",
+    "hbs": "^4.1.1",
     "lower-case": "^2.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
