--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "build:prod": "env-cmd -e production nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:dev": "env-cmd -e development nest start --watch",
+    "start:debug": "env-cmd -e development nest start --debug --watch",
+    "start:prod": "env-cmd -e production node dist/main",
     "db:dev": "node dev-database.js",
+    "db:prod": "node prod-database.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -38,6 +40,7 @@
     "class-validator": "^0.12.2",
     "dockerode": "^3.2.1",
     "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
     "hbs": "^4.1.1",
     "lower-case": "^2.0.1",
     "passport": "^0.4.1",
