--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "export TS_NODE=1 && ts-node node_modules/typeorm/cli.js"
+    "typeorm:prod": "export TS_NODE=1 && env-cmd -e production ts-node node_modules/typeorm/cli.js",
+    "typeorm:dev": "export TS_NODE=1 && env-cmd -e development ts-node node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
@@ -43,6 +44,7 @@
     "env-cmd": "^10.1.0",
     "hbs": "^4.1.1",
     "lower-case": "^2.0.1",
+    "otplib": "^12.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
