--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/swagger": "^4.5.12",
     "@nestjs/typeorm": "^7.1.0",
     "@types/passport-local": "^1.0.33",
+    "aws-sdk": "^2.819.0",
     "builder-pattern": "^1.2.4",
     "change-case": "^4.1.1",
     "class-transformer": "^0.3.1",
