--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "env-cmd": "^10.1.0",
     "hbs": "^4.1.1",
     "lower-case": "^2.0.1",
+    "moment": "^2.29.1",
     "otplib": "^12.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
